Changed to write String